[gd_scene load_steps=4 format=2]

[ext_resource path="res://images/buisness.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 7.5 )

[node name="Player" type="Sprite"]
position = Vector2( 297, 139 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
defaultShotRate = 0.25

[node name="Timers" type="Node" parent="."]

[node name="Reload_speed" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Overcharge_recharge" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true

[node name="Overcharge_limit" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[connection signal="timeout" from="Timers/Reload_speed" to="." method="_on_Reload_speed_timeout"]
[connection signal="timeout" from="Timers/Overcharge_recharge" to="." method="_on_Overcharge_recharge_timeout"]
[connection signal="timeout" from="Timers/Overcharge_limit" to="." method="_on_Overcharge_limit_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
